--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "add": "^2.0.6",
     "autoprefixer": "10.4.15",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
-    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
