--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "add": "^2.0.6",
     "autoprefixer": "10.4.15",
+    "firebase": "^10.4.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "redux": "^4.2.1",
+    "store": "^2.0.12",
     "tailwindcss": "3.3.3"
   }
 }
