--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^2.1.5",
     "add": "^2.0.6",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.10.1",
+    "listen": "^1.0.1",
+    "micro": "^10.0.1",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
@@ -24,6 +30,7 @@
     "react-responsive-carousel": "^3.2.23",
     "redux": "^4.2.1",
     "store": "^2.0.12",
+    "stripe": "^13.6.0",
     "tailwindcss": "3.3.3"
   }
 }
